fix: Button border anim not showing up on intro

--- a/src/app/styles/components/Button.module.scss
+++ b/src/app/styles/components/Button.module.scss
@@ -26,12 +26,10 @@
     }
   }
 
-  &.secondary {
+  &.secondary.notShadow {
     @include border-grad;
-
-    & .gradShadow {
-      display: none;
-    }
+    background-color: var(--background);
+    color: var(--foreground);
   }
 }
 
